* test: updated to junit 5, for old tests before upgrading API, add following dependency 'junit:junit:4.12' 'org.junit.vintage:junit-vintage-engine:4.12.1'         for integration test use "@ExtendWith(IntegrationExtension.class)" instead of @RunWith